# zx-spectrum

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: assembler_core.c  assembler_ui.c  build.bat  debugger.c  disk.c  disk.h  main.c  microdrive.c  microdrive.h  poke.c  resources.rc  spectrum.c  spectrum.h  szx_inflate.c  szx_inflate.h  tape.c  tape.h  z80.c  z80.h
src/examples/: equ-demo.asm  hello.asm  include-main.asm  include-shared.asm  source.asm  space-invaders.asm
